<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Hacking Helper</string>

    <string name="category_hacking">Hacking</string>
    <string name="category_booty">Booty L1, L2</string>
    <string name="category_metachemistry">Metachemistry L1, L2</string>
    <string name="category_martial_arts">Martial Arts</string>
    <string name="category_guard">Guard</string>
    <string name="category_protheion">Protheion</string>

</resources>
